@@ -2,6 +2,14 @@
 \title{News for Package 'synchrony'}
 \encoding{UTF-8}
 
+\section{Changes in synchrony version 0.2.4 (2015-08-22)}{
+  \subsection{fixed}{
+    \itemize{
+    \item \code{vario.fit} handles NAs in \code{vario} objects more gracefully
+    }
+  }
+}
+
 \section{Changes in synchrony version 0.2.3 (2014-07-14)}{
   \subsection{fixed}{
     \itemize{
